--- a/src/230105_panda_set_up.html
+++ b/src/230105_panda_set_up.html
@@ -514,18 +514,18 @@ library(recount3)</code></pre>
 <pre><code>## Loading required package: IRanges</code></pre>
 <pre><code>## Loading required package: GenomeInfoDb</code></pre>
 <pre class="r"><code>human_projects&lt;- available_projects()</code></pre>
-<pre><code>## 2023-04-10 11:09:49 caching file sra.recount_project.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:09:50 caching file gtex.recount_project.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:09:50 caching file tcga.recount_project.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:22 caching file sra.recount_project.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:23 caching file gtex.recount_project.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:24 caching file tcga.recount_project.MD.gz.</code></pre>
 <pre class="r"><code>test&lt;- create_rse(human_projects[(human_projects$project == &quot;SRP118922&quot;),])</code></pre>
-<pre><code>## 2023-04-10 11:09:58 downloading and reading the metadata.</code></pre>
-<pre><code>## 2023-04-10 11:09:59 caching file sra.sra.SRP118922.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:09:59 caching file sra.recount_project.SRP118922.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:10:00 caching file sra.recount_qc.SRP118922.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:10:01 caching file sra.recount_seq_qc.SRP118922.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:10:01 caching file sra.recount_pred.SRP118922.MD.gz.</code></pre>
-<pre><code>## 2023-04-10 11:10:02 downloading and reading the feature information.</code></pre>
-<pre><code>## 2023-04-10 11:10:02 caching file human.gene_sums.G026.gtf.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:33 downloading and reading the metadata.</code></pre>
+<pre><code>## 2023-04-10 11:30:34 caching file sra.sra.SRP118922.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:35 caching file sra.recount_project.SRP118922.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:35 caching file sra.recount_qc.SRP118922.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:36 caching file sra.recount_seq_qc.SRP118922.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:37 caching file sra.recount_pred.SRP118922.MD.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:37 downloading and reading the feature information.</code></pre>
+<pre><code>## 2023-04-10 11:30:38 caching file human.gene_sums.G026.gtf.gz.</code></pre>
 <pre><code>## Found more than one class &quot;file&quot; in cache; using the first, from namespace &#39;BiocGenerics&#39;</code></pre>
 <pre><code>## Also defined by &#39;RJSONIO&#39;</code></pre>
 <pre><code>## Found more than one class &quot;file&quot; in cache; using the first, from namespace &#39;BiocGenerics&#39;</code></pre>
@@ -536,9 +536,9 @@ library(recount3)</code></pre>
 <pre><code>## Also defined by &#39;RJSONIO&#39;</code></pre>
 <pre><code>## Found more than one class &quot;connection&quot; in cache; using the first, from namespace &#39;BiocGenerics&#39;</code></pre>
 <pre><code>## Also defined by &#39;RJSONIO&#39;</code></pre>
-<pre><code>## 2023-04-10 11:10:04 downloading and reading the counts: 35 samples across 63856 features.</code></pre>
-<pre><code>## 2023-04-10 11:10:04 caching file sra.gene_sums.SRP118922.G026.gz.</code></pre>
-<pre><code>## 2023-04-10 11:10:07 construcing the RangedSummarizedExperiment (rse) object.</code></pre>
+<pre><code>## 2023-04-10 11:30:39 downloading and reading the counts: 35 samples across 63856 features.</code></pre>
+<pre><code>## 2023-04-10 11:30:40 caching file sra.gene_sums.SRP118922.G026.gz.</code></pre>
+<pre><code>## 2023-04-10 11:30:42 construcing the RangedSummarizedExperiment (rse) object.</code></pre>
 <pre class="r"><code>feature_info &lt;- test@rowRanges
 rm(test)</code></pre>
 <pre class="r"><code>saveRDS(feature_info, paste0(dir_path, &quot;data/recount3_feature_info.rds&quot;))</code></pre>
@@ -578,7 +578,7 @@ tissues&lt;- tissues[! grepl(&quot;Cell&quot;, tissues)]</code></pre>
     dir_path, &quot;results/lioness/processed_normalized_expression/&quot;, 
     tissues[i], 
     &quot;_gtex_processed_expression.rds&quot;, sep = &quot;&quot;))
-  
+
   panda_tissue_fix(expression, expression_file = file_expression)
 }</code></pre>
 </div>
@@ -599,127 +599,9 @@ Dates when operations were done:
 230104</code></pre>
 <div id="versions" class="section level2">
 <h2>Versions</h2>
-<pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>## R version 4.2.2 (2022-10-31)
-## Platform: x86_64-pc-linux-gnu (64-bit)
-## Running under: Ubuntu 22.04.1 LTS
-## 
-## Matrix products: default
-## BLAS:   /usr/lib/x86_64-linux-gnu/openblas-pthread/libblas.so.3
-## LAPACK: /usr/lib/x86_64-linux-gnu/openblas-pthread/libopenblasp-r0.3.20.so
-## 
-## locale:
-##  [1] LC_CTYPE=en_US.UTF-8       LC_NUMERIC=C              
-##  [3] LC_TIME=en_US.UTF-8        LC_COLLATE=en_US.UTF-8    
-##  [5] LC_MONETARY=en_US.UTF-8    LC_MESSAGES=en_US.UTF-8   
-##  [7] LC_PAPER=en_US.UTF-8       LC_NAME=C                 
-##  [9] LC_ADDRESS=C               LC_TELEPHONE=C            
-## [11] LC_MEASUREMENT=en_US.UTF-8 LC_IDENTIFICATION=C       
-## 
-## attached base packages:
-## [1] stats4    stats     graphics  grDevices utils     datasets  methods  
-## [8] base     
-## 
-## other attached packages:
-##  [1] recount3_1.8.0              SummarizedExperiment_1.28.0
-##  [3] GenomicRanges_1.50.2        GenomeInfoDb_1.34.4        
-##  [5] IRanges_2.32.0              S4Vectors_0.36.1           
-##  [7] MatrixGenerics_1.10.0       matrixStats_0.63.0         
-##  [9] netZooR_1.2.1               matrixcalc_1.0-6           
-## [11] yarn_1.24.0                 pandaR_1.30.0              
-## [13] Biobase_2.58.0              BiocGenerics_0.44.0        
-## [15] reticulate_1.26             igraph_1.3.5               
-## 
-## loaded via a namespace (and not attached):
-##   [1] utf8_1.2.2                R.utils_2.12.2           
-##   [3] proto_1.0.0               RUnit_0.4.32             
-##   [5] tidyselect_1.2.0          RSQLite_2.2.20           
-##   [7] AnnotationDbi_1.60.0      grid_4.2.2               
-##   [9] BiocParallel_1.32.5       munsell_0.5.0            
-##  [11] base64url_1.4             codetools_0.2-18         
-##  [13] preprocessCore_1.60.1     chron_2.3-58             
-##  [15] pbdZMQ_0.3-8              withr_2.5.0              
-##  [17] colorspace_2.0-3          Category_2.64.0          
-##  [19] filelock_1.0.2            knitr_1.41               
-##  [21] uuid_1.1-0                rstudioapi_0.14          
-##  [23] repr_1.1.4                GenomeInfoDbData_1.2.9   
-##  [25] bit64_4.0.5               rhdf5_2.42.0             
-##  [27] downloader_0.4            vctrs_0.5.1              
-##  [29] generics_0.1.3            xfun_0.36                
-##  [31] BiocFileCache_2.6.0       R6_2.5.1                 
-##  [33] doParallel_1.0.17         illuminaio_0.40.0        
-##  [35] RJSONIO_1.3-1.6           locfit_1.5-9.7           
-##  [37] bitops_1.0-7              rhdf5filters_1.10.0      
-##  [39] cachem_1.0.6              reshape_0.8.9            
-##  [41] DelayedArray_0.24.0       assertthat_0.2.1         
-##  [43] BiocIO_1.8.0              scales_1.2.1             
-##  [45] nnet_7.3-18               gtable_0.3.1             
-##  [47] rlang_1.0.6               genefilter_1.80.2        
-##  [49] splines_4.2.2             rtracklayer_1.58.0       
-##  [51] GEOquery_2.66.0           hexbin_1.28.2            
-##  [53] reshape2_1.4.4            yaml_2.3.6               
-##  [55] GenomicFeatures_1.50.3    backports_1.4.1          
-##  [57] RBGL_1.74.0               tools_4.2.2              
-##  [59] nor1mix_1.3-0             ggplot2_3.4.0            
-##  [61] ellipsis_0.3.2            gplots_3.1.3             
-##  [63] jquerylib_0.1.4           RColorBrewer_1.1-3       
-##  [65] ggdendro_0.1.23           siggenes_1.72.0          
-##  [67] STRINGdb_2.10.0           sessioninfo_1.2.2        
-##  [69] gsubfn_0.7                hash_2.2.6.2             
-##  [71] Rcpp_1.0.9                plyr_1.8.8               
-##  [73] base64enc_0.1-3           sparseMatrixStats_1.10.0 
-##  [75] progress_1.2.2            zlibbioc_1.44.0          
-##  [77] purrr_1.0.0               RCurl_1.98-1.9           
-##  [79] prettyunits_1.1.1         sqldf_0.4-11             
-##  [81] openssl_2.0.5             bumphunter_1.40.0        
-##  [83] cluster_2.1.4             fs_1.5.2                 
-##  [85] magrittr_2.0.3            data.table_1.14.6        
-##  [87] hms_1.1.2                 evaluate_0.19            
-##  [89] xtable_1.8-4              XML_3.99-0.13            
-##  [91] mclust_6.0.0              compiler_4.2.2           
-##  [93] biomaRt_2.54.0            minfi_1.44.0             
-##  [95] tibble_3.1.8              RCy3_2.18.0              
-##  [97] KernSmooth_2.23-20        crayon_1.5.2             
-##  [99] R.oo_1.25.0               htmltools_0.5.4          
-## [101] GOstats_2.64.0            mgcv_1.8-41              
-## [103] tzdb_0.3.0                tidyr_1.2.1              
-## [105] DBI_1.1.3                 dbplyr_2.2.1             
-## [107] MASS_7.3-58.1             rappdirs_0.3.3           
-## [109] Matrix_1.5-1              readr_2.1.3              
-## [111] permute_0.9-7             cli_3.5.0                
-## [113] quantro_1.32.0            uchardet_1.1.1           
-## [115] R.methodsS3_1.8.2         quadprog_1.5-8           
-## [117] parallel_4.2.2            pkgconfig_2.0.3          
-## [119] GenomicAlignments_1.34.0  IRdisplay_1.1            
-## [121] xml2_1.3.3                foreach_1.5.2            
-## [123] annotate_1.76.0           penalized_0.9-52         
-## [125] bslib_0.4.2               rngtools_1.5.2           
-## [127] multtest_2.54.0           beanplot_1.3.1           
-## [129] XVector_0.38.0            AnnotationForge_1.40.0   
-## [131] doRNG_1.8.3               scrime_1.3.5             
-## [133] stringr_1.5.0             digest_0.6.31            
-## [135] vegan_2.6-4               graph_1.76.0             
-## [137] Biostrings_2.66.0         rmarkdown_2.19           
-## [139] base64_2.0.1              edgeR_3.40.1             
-## [141] DelayedMatrixStats_1.20.0 GSEABase_1.60.0          
-## [143] restfulr_0.0.15           curl_4.3.3               
-## [145] Rsamtools_2.14.0          gtools_3.9.4             
-## [147] rjson_0.2.21              lifecycle_1.0.3          
-## [149] nlme_3.1-160              jsonlite_1.8.4           
-## [151] Rhdf5lib_1.20.0           viridisLite_0.4.1        
-## [153] askpass_1.1               limma_3.54.0             
-## [155] fansi_1.0.3               pillar_1.8.1             
-## [157] lattice_0.20-45           plotrix_3.8-2            
-## [159] KEGGREST_1.38.0           fastmap_1.1.0            
-## [161] httr_1.4.4                survival_3.4-0           
-## [163] GO.db_3.16.0              glue_1.6.2               
-## [165] png_0.1-8                 iterators_1.0.14         
-## [167] bit_4.0.5                 Rgraphviz_2.42.0         
-## [169] stringi_1.7.8             sass_0.4.4               
-## [171] HDF5Array_1.26.0          blob_1.2.3               
-## [173] org.Hs.eg.db_3.16.0       caTools_1.18.2           
-## [175] memoise_2.0.1             IRkernel_1.3.1           
-## [177] dplyr_1.0.10</code></pre>
+<pre class="r"><code>sinfo &lt;- sessionInfo()
+saveRDS(sinfo, here::here(
+  &quot;results&quot;,&quot;230105_panda_setup_Info.RDS&quot;))</code></pre>
 </div>
 </div>
 
