--- a/src/230323_sbae_heatmaps.html
+++ b/src/230323_sbae_heatmaps.html
@@ -789,9 +789,9 @@ tissues with sex-bias expression</p>
 <pre class="r"><code>top_drug_target_investigation(&quot;CACNA1S&quot;)</code></pre>
 <pre><code>## [1] &quot;how many SBAE drugs with drug target?&quot;
 ## [1] 6</code></pre>
-<p>We investigated the top male (i.e., PPARA and PPARG) and top female
-(i.e., PGR , AR, NR3C1) bias genes based on the number of tissues as it
-a core gene in a sex-specific community.</p>
+<p>We investigated the top (i.e., PPARA, PPARG, PGR , AR, and NR3C1)
+sex-bias genes based on the number of tissues as it a core gene in a
+sex-specific community.</p>
 <pre class="r"><code>top_drug_target_investigation(&quot;PPARA&quot;)</code></pre>
 <pre><code>## [1] &quot;how many SBAE drugs with drug target?&quot;
 ## [1] 6</code></pre>
